--- a/mysite/templates/mysite/about.html
+++ b/mysite/templates/mysite/about.html
@@ -9,7 +9,7 @@
         <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">About Us</h4>
         <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
             <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Pages</a></li>
+            <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
             <li class="breadcrumb-item active text-secondary">About</li>
         </ol>
     </div>
@@ -166,7 +166,7 @@
                             <h4 class="text-dark my-4">Qualified Workers</h4>
                             <div class="counter-counting">
                                 <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">10</span>
-                                <span class="h1 fw-bold text-secondary">+</span>
+                                <span class="h1 fw-bold text-secondary"></span>
                             </div>
                         </div>
                     </div>
