--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -85,8 +85,8 @@
     <div class="container-fluid sticky-top px-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
             <a href="{% url 'index' %}" class="navbar-brand p-0">
-                <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Mintexx</h1>
-                <!-- <img src="img/logo.png" alt="Logo"> -->
+                <h1 class="text-secondary display-6"><img src="{% static 'mysite/img/logo.png' %}" height="100" width="100" alt="Logo">Mintexx Ventures</h1>
+                
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
