--- a/mysite/templates/mysite/contact.html
+++ b/mysite/templates/mysite/contact.html
@@ -8,7 +8,7 @@
                 <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Contact Us</h4>
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                    <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                     <li class="breadcrumb-item active text-secondary">Contact</li>
                 </ol>    
             </div>
@@ -23,7 +23,7 @@
                         <div class="text-center mx-auto pb-5" style="max-width: 800px;">
                             <p class="text-uppercase text-secondary fs-5 mb-0">Let’s Connect</p>
                             <h2 class="display-4 text-capitalize mb-3">Send Your Message</h2>
-                            <p class="mb-0">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                            <!-- <p class="mb-0">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
                         </div>
                         <form method="post">
                             {% csrf_token %}
