--- a/mysite/templates/mysite/index.html
+++ b/mysite/templates/mysite/index.html
@@ -16,9 +16,9 @@
             <div class="carousel-item active">
                 <img src="{% static 'mysite/img/img5.jpeg' %}" class="img-fluid w-100" alt="First slide" />
                 <div class="carousel-caption">
-                    <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated"
+                    <!-- <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated"
                         data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business
-                    </p>
+                    </p> -->
                     <h1 class="display-1 text-capitalize text-white mb-4 fadeInUp animate__animated"
                         data-animation="fadeInUp" data-delay="1.3s" style="animation-delay: 1.3s;">Quality You Can Trust.</h1>
                     <p class="mb-5 fs-5 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s"
@@ -37,9 +37,9 @@
             <div class="carousel-item">
                 <img src="{% static 'mysite/img/img8.jpeg' %}" class="img-fluid w-100" alt="Second slide" />
                 <div class="carousel-caption">
-                    <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated"
+                    <!-- <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated"
                         data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business
-                    </p>
+                    </p> -->
                     <h1 class="display-1 text-capitalize text-white mb-4 fadeInUp animate__animated"
                         data-animation="fadeInUp" data-delay="1.3s" style="animation-delay: 1.3s;">Building Dreams, Creating Legacies</h1>
                     <p class="mb-5 fs-5 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s"
@@ -58,9 +58,9 @@
             <div class="carousel-item">
                 <img src="{% static 'mysite/img/img14.jpeg' %}" class="img-fluid w-100" alt="Third slide" />
                 <div class="carousel-caption">
-                    <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated"
+                    <!-- <p class="text-uppercase text-secondary fs-4 mb-0 fadeInUp animate__animated"
                         data-animation="fadeInUp" data-delay="1s" style="animation-delay: 1s;">Construction Business
-                    </p>
+                    </p> -->
                     <h1 class="display-1 text-capitalize text-white mb-4 fadeInUp animate__animated"
                         data-animation="fadeInUp" data-delay="1.3s" style="animation-delay: 1.3s;">On Time, Every Time</h1>
                     <p class="mb-5 fs-5 fadeInUp animate__animated" data-animation="fadeInUp" data-delay="1.5s"
@@ -407,7 +407,7 @@
                             <h4 class="text-dark my-4">Qualified Workers</h4>
                             <div class="counter-counting">
                                 <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">10</span>
-                                <span class="h1 fw-bold text-secondary">+</span>
+                                <span class="h1 fw-bold text-secondary"></span>
                             </div>
                         </div>
                     </div>
