--- a/mysite/templates/mysite/service.html
+++ b/mysite/templates/mysite/service.html
@@ -8,7 +8,7 @@
         <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our Services</h4>
         <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
             <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Pages</a></li>
+            <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
             <li class="breadcrumb-item active text-secondary">Service</li>
         </ol>
     </div>
@@ -192,7 +192,6 @@
     </div>
 </div>
 <!-- Services End -->
-
 <!-- Fact Counter -->
 <div class="container-fluid counter py-5">
     <div class="container py-5">
@@ -205,7 +204,7 @@
                             <i class="fas fa-thumbs-up fa-4x text-secondary"></i>
                             <h4 class="text-dark my-4">Completed Projects</h4>
                             <div class="counter-counting">
-                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">456</span>
+                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">25</span>
                                 <span class="h1 fw-bold text-secondary">+</span>
                             </div>
                         </div>
@@ -220,7 +219,7 @@
                             <i class="fas fa-users fa-4x text-secondary"></i>
                             <h4 class="text-dark my-4">Happy Customers</h4>
                             <div class="counter-counting">
-                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">513</span>
+                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">25</span>
                                 <span class="h1 fw-bold text-secondary">+</span>
                             </div>
                         </div>
@@ -233,10 +232,10 @@
                         <div class="counter-item-style"></div>
                         <div class="counter-item-inner p-5">
                             <i class="fas fa-user fa-4x text-secondary"></i>
-                            <h4 class="text-dark my-4">Workers</h4>
+                            <h4 class="text-dark my-4">Qualified Workers</h4>
                             <div class="counter-counting">
-                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">53</span>
-                                <span class="h1 fw-bold text-secondary">+</span>
+                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">10</span>
+                                <span class="h1 fw-bold text-secondary"></span>
                             </div>
                         </div>
                     </div>
@@ -248,9 +247,9 @@
                         <div class="counter-item-style"></div>
                         <div class="counter-item-inner p-5">
                             <i class="fas fa-heart fa-4x text-secondary"></i>
-                            <h4 class="text-dark my-4">Years Experiance</h4>
+                            <h4 class="text-dark my-4">Years Experience</h4>
                             <div class="counter-counting">
-                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">17</span>
+                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">6</span>
                                 <span class="h1 fw-bold text-secondary">+</span>
                             </div>
                         </div>
@@ -258,7 +257,7 @@
                 </div>
             </div>
             <div class="col-12 text-center pt-4 wow fadeInUp" data-wow-delay="0.9s">
-                <a class="counter-btn btn btn-secondary py-3 px-5" href="#">Join With Us</a>
+                <a class="counter-btn btn btn-secondary py-3 px-5" href="{% url 'contact' %}">Join With Us</a>
             </div>
         </div>
     </div>
